[workspace]
resolver = "2"
members = [
    "crates/ghostsun-core",
    "crates/ghostsun-cli",
    "crates/ghostsun-app",
    "crates/ghostsun-camera",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.dev]
opt-level = 2
