[package]
name = "ghostsun-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform GhostSun desktop app (Metal and Direct3D 12 via wgpu)"

[[bin]]
name = "ghostsun-app"
path = "src/main.rs"

[dependencies]
ghostsun-core = { path = "../ghostsun-core" }
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
egui = "0.29"
rfd = "0.15"
